--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <h1>Patrícia Batista Morais</h1>
+        <h1>Patrícia B. Morais</h1>
         <h3>Desenvolvedora Full Stack </h3>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero in risus lacinia imperdiet.
