--- a/index.html
+++ b/index.html
@@ -4,73 +4,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/solid.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/fontawesome.css">
-
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
 
 <body>
     <header>
-        <p>Portfólio</p>
+        <h1>Portfólio</h1>
         <nav>
-            <a href="#about-me">Sobre mim</a>
-            <a href="#projects">Projetos</a>
-            <a href="#contacts">Contatos</a>
+            <ul>
+                <li><a href="#about-me">Sobre mim</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#contacts">Contatos</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Patrícia B. Morais</h1>
-        <h3>Desenvolvedora Full Stack </h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero in risus lacinia imperdiet.
-            Nam iaculis nibh mi, at egestas nulla interdum id. Praesent mattis dictum lacus sit amet pulvinar. Cras
-            dolor metus, commodo at turpis quis, hendrerit elementum neque. In non auctor tortor. Cras leo lorem,
-            pharetra vitae tempus et, vehicula non ipsum. Sed condimentum ex ultrices sem accumsan ultrices. Aliquam
-            maximus velit quis suscipit volutpat. In enim lacus, euismod vitae diam in, facilisis rutrum lectus.
-            Suspendisse id euismod quam. Ut suscipit a ex sed malesuada. Ut tincidunt consequat diam, id vehicula dolor
-            finibus sit amet. Donec id ante ante.
-        </p>
-        <img src="" alt="">
+        <section id="presentation" class="presentation">
+           <div class="presentation">
+                <h2>Patrícia B. Morais</h2>
+                <h3>Desenvolvedora <span>Full Stack</span></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero in risus lacinia imperdiet.
+                    Nam iaculis nibh mi, at egestas nulla interdum id. Praesent mattis dictum lacus sit amet pulvinar. Cras
+                    dolor metus, commodo at turpis quis, hendrerit elementum neque. In non auctor tortor. Cras leo lorem,
+                    pharetra vitae tempus et, vehicula non ipsum. Sed condimentum ex ultrices sem accumsan ultrices. Aliquam
+                    maximus velit quis suscipit volutpat. In enim lacus, euismod vitae diam in, facilisis rutrum lectus.
+                    Suspendisse id euismod quam. Ut suscipit a ex sed malesuada. Ut tincidunt consequat diam, id vehicula dolor
+                    finibus sit amet. Donec id ante ante.
+                </p>
+                <img src="" alt="Foto da pessoa" class="picture">
+           </div>
+        </section>
     </main>
 
     <section id="about-me">
-        <h2>Sobre Mim</h2>
-        <div>
-            <p>
-                Nunc tempor quam nec erat aliquet scelerisque. Nulla ac cursus turpis. Nullam eget nibh nisl. Etiam
-                congue tincidunt arcu, eu tincidunt arcu feugiat eu. Praesent nec varius enim. Nullam sodales viverra
-                fringilla. Sed eget venenatis elit. Praesent ut volutpat urna. Mauris iaculis leo odio, vel convallis
-                odio porttitor ut. Quisque pulvinar in purus nec imperdiet. Nullam at feugiat massa. Suspendisse at dui
-                ipsum. Quisque blandit facilisis congue. Proin nec condimentum nibh, vitae bibendum dui. Sed sed
-                convallis nibh. Vestibulum tellus tellus, varius nec felis placerat, euismod hendrerit justo.
-            </p>
+        <div class="about-me">
+            <h2>Sobre Mim</h2>
+                <p>
+                    Nunc tempor quam nec erat aliquet scelerisque. Nulla ac cursus turpis. Nullam eget nibh nisl. Etiam
+                    congue tincidunt arcu, eu tincidunt arcu feugiat eu. Praesent nec varius enim. Nullam sodales viverra
+                    fringilla. Sed eget venenatis elit. Praesent ut volutpat urna. Mauris iaculis leo odio, vel convallis
+                    odio porttitor ut. Quisque pulvinar in purus nec imperdiet. Nullam at feugiat massa. Suspendisse at dui
+                    ipsum. Quisque blandit facilisis congue. Proin nec condimentum nibh, vitae bibendum dui. Sed sed
+                    convallis nibh. Vestibulum tellus tellus, varius nec felis placerat, euismod hendrerit justo.
+                </p>
             <button class="btn-curriculum">Download</button>
-        </div>
 
-        <div>
             <p>
                 As principais tecnologias utilizadas nos últimos projetos foram:
             </p>
 
-            <div>
-                <i class="fa-solid fa-angles-right"></i><span>HTML</span>
-                <i class="fa-solid fa-angles-right"></i><span>CSS</span>
-                <i class="fa-solid fa-angles-right"></i><span>JavaScript</span>
-                <i class="fa-solid fa-angles-right"></i><span>Java</span>
-        </div>
-        <div>
-            <i class="fa-solid fa-angles-right"></i><span>C#</span>
-            <i class="fa-solid fa-angles-right"></i><span>Node.js</span>
-            <i class="fa-solid fa-angles-right"></i><span>Nest.js</span>
-            <i class="fa-solid fa-angles-right"></i><span>MongoDB</span>
-        </div>
-
-            <button class="btn-curriculum">Currículo</button>
+            <ul>
+                <li class="tecnologia">>> HTML5</li>
+                <li class="tecnologia">>> JavaScript</li>
+                <li class="tecnologia">>> React.js</li>
+                <li class="tecnologia">>> CSS3</li>
+                <li class="tecnologia">>> TypeScript</li>
+                <li class="tecnologia">>> Sass</li>
+            </ul>
         </div>
     </section>
 
+    <section id="projects">
+        <div class="projects">
+            <img src="" alt="picture" class="active">
+                <h2>Be Active</h2>
+                <p>
+                    Nunc tempor quam nec erat aliquet scelerisque. Nulla ac cursus turpis. Nullam eget nibh nisl. Etiam
+                    congue tincidunt arcu, eu tincidunt arcu feugiat eu. Praesent nec varius enim. Nullam sodales viverra
+                    fringilla. Sed eget venenatis elit. Praesent ut volutpat urna. Mauris iaculis leo odio, vel convallis
+                    odio porttitor ut. Quisque pulvinar in purus nec imperdiet. Nullam at feugiat massa. Suspendisse at dui
+                    ipsum. Quisque blandit facilisis congue. Proin nec condimentum nibh, vitae bibendum dui. Sed sed
+                    convallis nibh. Vestibulum tellus tellus, varius nec felis placerat, euismod hendrerit justo.
+                </p>
+        
+        <ul class="social-midia">
+            <li>
+                <a href="https://www.linkedin.com/in/patricia-batista-morais/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+        </div>
+    </section>
 </body>
-
 </html>
